Changed garbage collection settings.